# danea-easyfatt

./: .gitignore  .markdownlint.json  CHANGELOG.md  Gemfile  README.md  _config.yml  pyproject.toml  veryeasyfatt.config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: black.yml  build-documentation.yml  changelog.yml  documentation.yml  release-nightly.yml  release.yml  run-tests.yml  virus-check.yml
docs/: index.md  roadmap.md
docs/_data/: glossary.yml  roadmap.yml
docs/_sass/custom/: custom.css
docs/sviluppo/: crediti.md  documentation.md  formatter.md  index.md  prerequisiti.md  test.md
docs/utente/: configurazione.md  index.md  installazione.md  routexl.md
scripts/: build.py  documentation.py  release.py  slugify.mjs
src/: bootstrap.py  clienti.py  configuration.py  main.py  process_csv.py  process_xml.py  updater.py
src/app/: __init__.py  caching.py  clienti.py  config_manager.py  main.py  process_csv.py  process_kml.py  registry.py
src/bundle/: __init__.py  path.py
src/veryeasyfatt/: bootstrap.py  formatter.py  updater.py
src/veryeasyfatt/app/: __init__.py  caching.py  clienti.py  config_manager.py  constants.py  main.py  process_csv.py  process_kml.py  process_xml.py  registry.py
src/veryeasyfatt/app/integrations/: __init__.py  routexl.py
src/veryeasyfatt/app/integrations/google_earth/: __init__.py  constants.py
src/veryeasyfatt/app/integrations/routexl/: __init__.py  importing.py  timing.py
src/veryeasyfatt/app/integrations/windows/: registry.py
src/veryeasyfatt/bundle/: __init__.py  path.py
src/veryeasyfatt/configuration/: __init__.py  dynaconf_merge.py  schemas.py
src/veryeasyfatt/shared/: formatter.py  measuring.py  merging.py
src/veryeasyfatt/shared/formatter/: __init__.py  exceptions.py
src/veryeasyfatt/shared/pydantic/: __init__.py  hashable.py
src/veryeasyfatt/shared/ui/: SelectableMenu.py
tests/: __init__.py  test_bundle.py  test_configuration.py  test_formatter.py  test_merger.py  test_routexl.py  test_updater.py
tests/features/csv/: Documents.DefXml  config.toml  test_csv.py  test_main_flow.py
tests/features/kml/: Documents.DefXml  test_kml.py
tests/utils/: decorators.py
