[tool.poetry]
name = "danea-automation"
version = "1.0.1"
description = ""
authors = ["Luca Salvarani <lucasalvarani99@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]
repository = "https://github.com/LukeSavefrogs/danea-easyfatt"


[tool.poetry.dependencies]
# python = ">=3.8, <3.12"
python = "~3.10"
rich = "^13.0.1"
xmltodict = "^0.13.0"
requests = "^2.28.2"
toml = "^0.10.2"
packaging = "^23.0"
pandas = "^2.0.0"
openpyxl = "^3.0.10"
pint = "^0.20.1"
odfpy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.30"
pyinstaller = "^5.7.0"
poethepoet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
build = "scripts.build:main"
release = "scripts.release:main"


[tool.poe.tasks.docs]
sequence = [
	{script  = "os:system('bundle exec jekyll clean')"},
	{script  = "os:system('bundle exec jekyll serve --livereload --open-url --strict_front_matter --trace')"}
]
help = "Lancia il server LiveReload di Jekyll"


[tool.poe.tasks.test]
help = "Esegue i test"
cmd = "python -m unittest discover --failfast --catch"
# cmd = "python -m unittest discover --failfast --catch --verbose"