[tool.poetry]
name = "danea-automation"
version = "1.4.1"
description = "Automazione flussi aziendali Easyfatt"
authors = ["Luca Salvarani <lucasalvarani99@gmail.com>"]
readme = "README.md"
packages = [{include = "veryeasyfatt", from = "src"}]
repository = "https://github.com/LukeSavefrogs/danea-easyfatt"
documentation = "https://lukesavefrogs.github.io/danea-easyfatt/"
classifiers = [
	"Intended Audience :: End Users/Desktop",
	"Environment :: Win32 (MS Windows)",
	"Natural Language :: Italian",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "~3.10"
rich = "^13.0.1"
requests = "^2.31.0"
toml = "^0.10.2"
packaging = "^23.0"
pandas = "^2.0.0"
openpyxl = "^3.0.10"
pint = "^0.20.1"
odfpy = "^1.4.1"
kmlb = "^0.0.94"
pydantic = "^2.0.3"
easyfatt-db-connector = "^0.3.2"
geopy = "^2.3.0"
pyperclip = "^1.8.2"
dynaconf = "^3.2.2"


[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.30"
pyinstaller = "^5.7.0"
poethepoet = "^0.22.0"
autopep8 = "^2.0.2"
pyinstaller-versionfile = "^2.1.1"
mypy = "^1.5.1"
packaging = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
build = "scripts.build:main"
release = "scripts.release:release"


[tool.poe.tasks.docs]
sequence = [
	{script  = "os:system('bundle exec jekyll clean')"},
	{script  = "os:system('bundle exec jekyll serve --livereload --open-url --strict_front_matter --trace')"}
]
help = "Lancia il server LiveReload di Jekyll"


[tool.poe.tasks.test]
help = "Esegue i test"
cmd = "python -m unittest discover --catch"
# cmd = "python -m unittest discover --failfast --catch --verbose"

[tool.mypy]
ignore_missing_imports = true