[project]
name = "danea-automation"
version = "1.4.7"
description = "Automazione flussi aziendali Easyfatt"
authors = [{name = "Luca Salvarani", email = "lucasalvarani99@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
	"Intended Audience :: End Users/Desktop",
	"Environment :: Win32 (MS Windows)",
	"Natural Language :: Italian",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
]
dependencies = [
	"rich>=13.0.1,<14.0.0",
	"requests>=2.31.0,<3.0.0",
	"toml>=0.10.2,<0.11.0",
	"packaging>=23.0,<24.0",
	"pandas>=2.0.0,<3.0.0",
	"openpyxl>=3.0.10,<4.0.0",
	"pint>=0.20.1,<0.21.0",
	"odfpy>=1.4.1,<2.0.0",
	"kmlb>=0.0.94,<0.0.95",
	"pydantic>=2.0.3,<3.0.0",
	"easyfatt-db-connector>=0.3.2,<0.4.0",
	"geopy>=2.3.0,<3.0.0",
	"pyperclip>=1.8.2,<2.0.0",
	"dynaconf>=3.2.2,<4.0.0",
	"readchar>=4.2.1,<5.0.0",
]

[project.urls]
Repository = "https://github.com/LukeSavefrogs/danea-easyfatt"
Documentation = "https://lukesavefrogs.github.io/danea-easyfatt/"

[project.scripts]
build = "scripts.build:main"
release = "scripts.release:release"

[dependency-groups]
dev = [
	"gitpython>=3.1.30,<4.0.0",
	"pyinstaller>=6.0.0,<7.0.0",
	"poethepoet>=0.42.0,<0.43.0",
	"autopep8>=2.0.2,<3.0.0",
	"pyinstaller-versionfile>=3.0.0,<4.0.0",
	"mypy>=1.5.1,<2.0.0",
	"packaging>=23.1,<24.0",
	"black>=24.10,<24.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veryeasyfatt"]


[tool.poe.tasks.docs]
sequence = [
	{script  = "os:system('bundle exec jekyll clean')"},
	{script  = "os:system('bundle exec jekyll serve --livereload --open-url --strict_front_matter --trace')"}
]
help = "Lancia il server LiveReload di Jekyll"


[tool.poe.tasks.test]
help = "Esegue i test"
cmd = "python -m unittest discover --catch"
# cmd = "python -m unittest discover --failfast --catch --verbose"

[tool.mypy]
ignore_missing_imports = true
follow_untyped_imports = true
plugins = [
  "pydantic.mypy"
]

[tool.black]
include = '\.pyi?$'
target-version = ["py310", "py311"]
